remove division tag

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-    <div>
-        <pre id="update">
-            </pre>
-    </div>
+    <pre id="update"></pre>
 </body>
 
 </html>
